--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nPE-MB-PWB" userLabel="Preview Image Constraints">
                                         <rect key="frame" x="0.0" y="44" width="335" height="496"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vivarium" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-4v-YfM" userLabel="Preview Image">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-4v-YfM" userLabel="Preview Image">
                                                 <rect key="frame" x="2.3333333333333428" y="0.0" width="330.66666666666663" height="496"/>
                                                 <color key="backgroundColor" name="YP White"/>
                                                 <constraints>
@@ -65,6 +65,9 @@
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                         <integer key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </imageView>
@@ -135,17 +138,25 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="cx6-wq-J0h">
+                                <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
+                                <color key="color" name="YP White"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hsp-nd-BZf" secondAttribute="bottom" id="CUP-Ht-y9b"/>
+                            <constraint firstItem="cx6-wq-J0h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OQk-Ah-RA9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hsp-nd-BZf" secondAttribute="trailing" constant="20" id="OW0-dm-Kkt"/>
                             <constraint firstItem="hsp-nd-BZf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="hmJ-Qf-4is"/>
+                            <constraint firstItem="cx6-wq-J0h" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ugs-ep-uCD"/>
                             <constraint firstItem="hsp-nd-BZf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vVw-3U-miV"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="cx6-wq-J0h" id="eSK-1F-OXC"/>
+                        <outlet property="body" destination="hsp-nd-BZf" id="Bgb-ty-c5T"/>
                         <outlet property="indexLabel" destination="IFI-Xb-Qzi" id="evE-Ga-kBu"/>
                         <outlet property="noButton" destination="Dmx-DR-hC2" id="Sdk-sN-hfS"/>
                         <outlet property="previewImage" destination="BkM-4v-YfM" id="tYw-3r-ue3"/>
@@ -159,7 +170,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Vivarium" width="540" height="800"/>
         <namedColor name="YP Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
